--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wrap-notes"
+name = "wrap_notes"
 version = "0.1.0"
 authors = ["Peter <petercharlandsilence@gmail.com>"]
 edition = "2018"
@@ -7,3 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4"
+chrono-tz = "0.4"
