Finished auto fill of blanks from main generate note function. Moving on to add in methods to help user choose how to fill in the blanks for all blank types that do not permit autofill. Currently it simply iterates through the list of blanks in the note, but it will be needed to allow the user multiple options in terms of whether to fill in the current blank, whether to select a different blank to fill, whether to quit, or whether to view menus of things to fill in blanks with

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,19 @@ version = "0.1.0"
 authors = ["Peter <petercharlandsilence@gmail.com>"]
 edition = "2018"
 
+[[bin]]
+name = "wrap_notes"
+path = "src/main.rs"
+
+[lib]
+name = "wrap_notes"
+path = "src/lib.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 chrono = "0.4"
 chrono-tz = "0.4"
 aes = "0.6.0"
+regex = "1"
+lazy_static = "1.4.0"
